--- a/semana4/challenges/spotify/css/style.css
+++ b/semana4/challenges/spotify/css/style.css
@@ -1,6 +1,5 @@
 /* css de spotify */
 
-
 body {
   font-family: "Inter", sans-serif !important;
 }
@@ -26,6 +25,7 @@ main {
     "player player player";
   grid-template-rows: 90vh 10vh;
   grid-template-columns: 270px 1fr 270px;
+  background-color: #212121;
 }
 
 .sidebar {
@@ -35,10 +35,14 @@ main {
 .principal {
   grid-area: principal;
 }
+
 .extra {
   grid-area: extra;
 }
+
 .player {
   grid-area: player;
 }
+
+
 
