--- a/semana7/tip-calculator/css/style.css
+++ b/semana7/tip-calculator/css/style.css
@@ -26,7 +26,7 @@ main {
 }
 
 .form {
-  background-color: #fff;
+  background-color:rgb(8, 54, 85);
   padding: 40px;
   border-radius: 16px;
   gap: 30px;
