--- a/portfolio/challenges/barralateral/css/style.css
+++ b/portfolio/challenges/barralateral/css/style.css
@@ -2,6 +2,39 @@
   margin: 0;
   padding: 0;
   box-sizing: 0;
-  font-family: Arial, Helvetica, sans-serif;
 }
+body{
+  
+  height: 100vh;
+
+}
+
+.videoBravo{
+  position: relative;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  /* es para que el video que sobre sale asi nose ve */
+  display: grid;
+  place-items: center ;
+
+}
+
+video{
+  width: 90%;
+
+}
+
+h1{
+  position: absolute;
+  /* se pone en la mitad del video */
+  color: white;
+  font-weight: 900;
+  font-size: 2.8rem;
+  /* el nombre sobresale el todo el video */
+  mix-blend-mode: difference;
+  /* fusionamos el video con las letras  */
+
+}
+
 
