--- a/portfolio/leon/css/reset.css
+++ b/portfolio/leon/css/reset.css
@@ -1,13 +1,13 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Fraunces", sans-serif;
-  }
-  
-  body{
-    width: 100%;
-    min-height: 100vh;
-    background: url()
-  
-  }
+*{
+  box-sizing: border-box;
+  /* hace respetar la misura que metamos */
+  margin: 0;
+  padding: 0;
+}
+
+body{
+  height: 200vh;
+  width: 100vw;
+  border: solid red;
+  position: relative;
+}
