--- a/portfolio/leon/css/style.css
+++ b/portfolio/leon/css/style.css
@@ -1,15 +1,12 @@
 header {
+  position:fixed ;
   width: 100%;
-  height: 80px;
-  animation: animatehover 5s linear infinite;
-  position: fixed; /*posizione fissa*/
-  z-index: 99;
-  box-shadow: 0 0 10px black;
-  background: rgba(0, 0, 0, 0.3);
+  height: 10vh;
+  background-color: rgb(0,0,0,0.6) ;
 }
 
 
-
-
-
-
+.leone5{
+    width: 70px;
+    height: 70px;
+}
